# rundown

./: .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SCHEMA.md  dev.py  solution.md
.github/workflows/: ci.yml
backend/: pyproject.toml
backend/app/: clients.py  config.py  generate.py  main.py
backend/app/adapters/: base.py  elevenlabs_client.py  fakes.py  openai_client.py  retry.py
backend/app/api/: episodes.py  metrics.py  preferences.py  schedule.py  schemas.py  voices.py
backend/app/pipeline/: assembly.py  dedupe.py  generator.py  narrate.py  scriptwriter.py
backend/app/prompts/: scriptwriter.txt
backend/app/sources/: base.py  google_news.py
backend/app/store/: db.py  metrics.py  models.py  repo.py
backend/scripts/: make_sample.py  seed_mock_analytics.py
backend/tests/: test_api.py  test_assembly.py  test_budget_accounting.py  test_cli_smoke.py  test_config.py  test_db.py  test_dedupe.py  test_fakes.py  test_generator.py  test_hardening.py  test_health.py  test_metrics.py  test_narrate.py  test_narrate_segmented.py  test_new_endpoints.py  test_preferences_defaults.py  test_repo.py  test_schedule.py  test_scriptwriter.py  test_sources.py  test_tts_segmented.py  test_tts_voice_settings.py
backend/tests/fixtures/: google_news_sample.xml
docs/: sample-episode-two-host.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css  theme.ts  types.ts
frontend/src/api/: client.ts
frontend/src/components/: AudioPlayer.test.tsx  AudioPlayer.tsx  EpisodeCover.tsx  (+7 more)
(+4 files in other folders)
