[project]
name = "rundown-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111",
  "uvicorn[standard]>=0.30",
  "sqlmodel>=0.0.21",
  "feedparser>=6.0",
  "tenacity>=8.4",
  "openai>=1.40",
  "elevenlabs>=1.5",
  "python-dotenv>=1.0",
  "httpx>=0.27",
  # MP3 encoding for locally assembled PCM. A pure-pip wheel on every platform:
  # no ffmpeg, no system packages.
  "lameenc>=1.8",
]

[project.optional-dependencies]
dev = ["pytest>=8.2", "ruff>=0.5"]

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
pythonpath = ["."]
